--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinancasK" >
-        <activity android:name=".ListaTransacoesActivity" >
+        <activity android:name=".ui.activity.ListaTransacoesActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
